# axum_seaorm

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: todo.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  model.rs
src/utils/: api_error.rs
