[package]
name = "todo_axum_seaorm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.7.5"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
tokio = { version = "1.40.0", features = ["full"]}
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
dotenvy = "0.15.7"
